--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="appsandmaps.temple.edu.content_provider" >
-    
+
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="edu.temple.app.provider.permission.READ_PROVIDER"></uses-permission>
     <uses-permission android:name="edu.temple.app.provider.permission.WRITE_PROVIDER"></uses-permission>
 
