--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,13 +1,14 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 22
+    compileSdkVersion 21
     buildToolsVersion "21.1.2"
 
     defaultConfig {
         applicationId "appsandmaps.temple.edu.content_provider"
-        minSdkVersion 19
-        targetSdkVersion 22
+
+        minSdkVersion 18
+        targetSdkVersion 19
         versionCode 1
         versionName "1.0"
     }
@@ -22,4 +23,6 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:22.1.1'
+    compile files('libs/remotesensor-v1.0.0.jar')
+    compile files('libs/sdk-v1.0.0.jar')
 }
